<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/main">

    <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/question"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:id="@+id/waiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/a_stylish_waiter"
            android:src="@drawable/waiter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_text_view"/>

    <RelativeLayout
            android:id="@+id/attendees_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/waiter"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="20dp">
        <TextView
                android:id="@+id/how_many_seats"
                android:labelFor="@id/num_attend_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_people"/>

        <EditText
                android:id="@+id/num_attend_edit_text"
                android:inputType="number"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:autofillHints="0"
                android:layout_below="@+id/how_many_seats" />
    </RelativeLayout>

    <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_text"
            android:textColor="@color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendees_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>