<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/floor_plan_activity" >

    <ImageView
            android:id="@+id/imageView0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/floor_plan_of_restaurant_image_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/overhead"/>



    <androidx.gridlayout.widget.GridLayout
            android:id="@+id/light_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            app:columnCount="5"
            app:layout_constraintLeft_toLeftOf="@+id/imageView0"
            app:layout_constraintTop_toTopOf="@+id/imageView0"
            app:layout_constraintRight_toRightOf="@+id/imageView0"
            app:layout_constraintBottom_toBottomOf="@id/imageView0"
            app:rowCount="4"
            app:useDefaultMargins="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="44dp">

        <ImageView
                android:id="@+id/imageView1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/table_image_description"
                app:srcCompat="@drawable/round_solid" />

        <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/booth_image_description"
                app:srcCompat="@drawable/rectangle_faded" />

        <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/booth_image_description"
                app:srcCompat="@drawable/rectangle_faded" />

        <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/booth_image_description"
                app:srcCompat="@drawable/rectangle_faded" />

        <ImageView
                android:id="@+id/imageView5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="invisible"
                android:contentDescription="@string/booth_image_description"
                app:srcCompat="@drawable/rectangle_faded" />

        <ImageView
                android:id="@+id/imageView6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/table_image_description"
                android:visibility="invisible"
                app:srcCompat="@drawable/round_solid" />

        <ImageView
                android:id="@+id/imageView7"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:contentDescription="@string/table_image_description"
                app:srcCompat="@drawable/round_solid" />

        <ImageView
                android:id="@+id/imageView8"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/table_image_description"
                android:visibility="invisible"
                app:srcCompat="@drawable/round_solid" />

        <ImageView
                android:id="@+id/imageView9"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/table_image_description"
                app:srcCompat="@drawable/round_solid" />

        <ImageView
                android:id="@+id/imageView10"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/booth_image_description"
                app:srcCompat="@drawable/rectangle_faded" />

        <ImageView
                android:id="@+id/imageView11"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/table_image_description"
                app:srcCompat="@drawable/round_solid" />

        <ImageView
                android:id="@+id/imageView12"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/table_image_description"
                android:visibility="invisible"
                app:srcCompat="@drawable/round_solid" />

        <ImageView
                android:id="@+id/imageView13"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="invisible"
                android:contentDescription="@string/table_image_description"
                app:srcCompat="@drawable/round_solid" />

        <ImageView
                android:id="@+id/imageView14"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/table_image_description"
                android:visibility="invisible"
                app:srcCompat="@drawable/round_solid" />

        <ImageView
                android:id="@+id/imageView15"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/booth_image_description"
                app:srcCompat="@drawable/rectangle_faded" />

        <ImageView
                android:id="@+id/imageView16"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="invisible"
                android:contentDescription="@string/table_image_description"
                app:srcCompat="@drawable/round_solid" />

        <ImageView
                android:id="@+id/imageView17"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:contentDescription="@string/table_image_description"
                app:srcCompat="@drawable/round_solid" />

        <ImageView
                android:id="@+id/imageView18"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="invisible"
                android:contentDescription="@string/table_image_description"
                app:srcCompat="@drawable/round_solid" />

        <ImageView
                android:id="@+id/imageView19"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/table_image_description"
                app:srcCompat="@drawable/round_solid" />

        <ImageView
                android:id="@+id/imageView20"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/booth_image_description"
                app:srcCompat="@drawable/rectangle_faded" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>